Second attempt for bug 65671 - JS (SpiderMonkey) Date() timezone problems on UNIX platforms.  margaret.chan@sun.com